--- a/projects.html
+++ b/projects.html
@@ -59,7 +59,7 @@
                             <li class="active"><a href="./projects.html">Get Involved</a></li>
                             <li><a href="./about.html">Donate</a></li>
                             <li><a href="./about.html">About Us</a></li>
-                            <li><a href="./about.html">Contact</a></li>
+                            <li><a href="./contact.html">Contact</a></li>
 <!--
                             <li><a href="#">Pages</a>
                                 <ul class="dropdown">
@@ -114,18 +114,21 @@
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6">
                     <div class="project__item">
+                        <a href="project-details2.html">
                         <img src="img/c2.jpg" alt="">
-                    <a href="#" class="primary-btn normal-btn">Belur School</a>
+                    <a href="project-details2.html" class="primary-btn normal-btn">Belur School</a>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6">
                     <div class="project__item">
+                        <a href="project-details3.html">
                         <img src="img/c1.jpg" alt="">
-                    <a href="#" class="primary-btn normal-btn">Free Zoom Classes</a>
+                    <a href="project-details3.html" class="primary-btn normal-btn">Free Zoom Classes</a>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6">
                     <div class="project__item">
+                        <a href="project-details.html">
                         <img src="img/c4.jpg" alt="">
                     <a href="#" class="primary-btn normal-btn">Youtube Tutorials</a>
                     </div>
