--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
                             <li><a href="./projects.html">Get Involved</a></li>
                             <li><a href="./about.html">Donate</a></li>
                             <li class="active"><a href="./about.html">About Us</a></li>
-                            <li><a href="./about.html">Contact</a></li>
+                            <li><a href="./contact.html">Contact</a></li>
 <!--
                             <li><a href="#">Pages</a>
                                 <ul class="dropdown">
@@ -188,11 +188,12 @@
                                 <h5>Abhijith Varma Mudunuri</h5>
                                 <span>CTO</span>
                             </div>
-                            <p>Abhijith is a junior at American High School. He loves to compete in public forum debate, design UI, and program backend. In his spare time, he enjoys playing video games, coding, and teaching debate at Ezy Learning. Abhijith learned python in 8th grade and web development in 9th grade</p>
+                            <p>Hi, I am Abhijith a junior at American High School. I love to compete in public forum debate, design UI, and program backend. In my spare time, he enjoys playing video games, coding, and teaching debate. I learned python in 8th grade and web development in 9th grade. I love helped people in general and my own organization, and look forward to helping ECDE grow.</p>
                             <div class="team__social">
-                                <a href="#"><i class="fa fa-facebook"></i></a>
-                                <a href="#"><i class="fa fa-twitter"></i></a>
-                                <a href="#"><i class="fa fa-instagram"></i></a>
+                                <a href="https://www.facebook.com/abhijithvarma.mudunuri.9"><i class="fa fa-facebook"></i></a>
+                                <a href="https://www.instagram.com/abhijith.varma.mudunuri"><i class="fa fa-instagram"></i></a>
+                                <a href="https://www.linkedin.com/in/abhijith-varma-mudunuri-8529b01a8"><i class="fa fa-linkedin"></i></a>
+                                <a href="https://github.com/mabhi02?tab=projects"><i class="fa fa-github"></i></a>
                             </div>
                         </div>
                     </div>
@@ -206,9 +207,9 @@
                             </div>
                             <p> Hi! I am Ujjawal, a sophomore at American High School. Ever since I was a kid, I have wanted to contribute back to society in some way, and when I found ECDE I knew helping underprivileged kids was the way to do that. Along with allowing me to help those in need, I have also learned valuable skills in ECDE such as team management and marketing.</p>
                             <div class="team__social">
-                                <a href="#"><i class="fa fa-facebook"></i></a>
-                                <a href="#"><i class="fa fa-twitter"></i></a>
-                                <a href="#"><i class="fa fa-instagram"></i></a>
+                                <a href="https://www.facebook.com/ujjawal.prasad.750/"><i class="fa fa-facebook"></i></a>
+                                <a href="https://www.instagram.com/8wali8/"><i class="fa fa-instagram"></i></a>
+                                <a href="https://www.linkedin.com/in/ujjawal-prasad-059563216/"><i class="fa fa-linkedin"></i></a>
                             </div>
                         </div>
                     </div>
@@ -225,6 +226,21 @@
                                 <a href="#"><i class="fa fa-facebook"></i></a>
                                 <a href="#"><i class="fa fa-twitter"></i></a>
                                 <a href="#"><i class="fa fa-instagram"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="team__item set-bg" data-setbg="img/prisha.jpeg">
+                        <div class="team__text">
+                            <div class="team__title">
+                                <h5>Prisha Sanghvi</h5>
+                                <span>COO</span>
+                            </div>
+                            <p>Hey, I am Prisha and I am a junior at Dougherty Valley High School. I have always been interested in giving back to the community and helping out with educational passions and projects, especially in India. I have been part of organizations before that have helped give back to the youth in need.</p>
+                            <div class="team__social">
+                                <a href="https://www.facebook.com/prisha.sanghvi.75/"><i class="fa fa-facebook"></i></a>
+                                <a href="https://www.instagram.com/0_0prishasanghvi0_0/"><i class="fa fa-instagram"></i></a>
                             </div>
                         </div>
                     </div>
