--- a/project-details3.html
+++ b/project-details3.html
@@ -59,7 +59,7 @@
                             <li><a href="./projects.html">Get Involved</a></li>
                             <li><a href="./about.html">Donate</a></li>
                             <li><a href="./about.html">About Us</a></li>
-                            <li><a href="./contact.html">Contact</a></li>
+                            <li><a href="./about.html">Contact</a></li>
 <!--
                             <li><a href="#">Pages</a>
                                 <ul class="dropdown">
@@ -93,7 +93,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="breadcrumb__text">
-                        <h2>Maruthi Sevakshethra NGO</h2>
+                        <h2>ECDE Zoom Classes</h2>
                         </div>
                     </div>
                 </div>
@@ -109,22 +109,20 @@
                 <div class="col-lg-8">
                     <div class="row">
                         <div class="col-lg-6 col-md-6 col-sm-6">
-                            <img src="img/mar.png" alt="">
-                            <img src="img/pc2.jpeg" alt="">
-                            <img src="img/pc3.jpeg" alt="">
+                            <img src="img/zm1.jpg" alt="">
+                            <img src="img/zm3.jpg" alt="">
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-6">
-                            <img src="img/pc1.jpeg" alt="">
-                            <img src="img/pc4.jpeg" alt="">
+                            <img src="img/zm4.jpg" alt="">
+                            <img src="img/zm2.jpg" alt="">
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4">
                     <div class="project__sidebar">
                         <div class="project__sidebar__about">
-                            <h2>Maruthi Sevakshethra NGO</h2>
-                            <p>The ECDE Foundation has partnered with an Institution in India called Maruthi Seva Kshetra. This Institution schools orphaned children and children who cannot afford proper education by giving them all the basic needs in life. In addition, the Institution runs a school that is open to the public. We are proud to be working with them and 100% of our donations will go to them in the 2018-2019 year.</p>
-                            <p>On August 15, 2019 ECDE Foundation donated $800 and 2 computers to Maruthi Seva school/organization. The school used some money to buy a water heater so they can get clean hot water. In addition, they used the rest of the money to buy textbooks and other such supplies. Our CEO and our Program Manager met with the kids we were helping and spent time with them. We understood the true extent of their needs and were pleasantly surprised to see their drive for learning.</p>
+                            <h2>ECDE Zoom Classes</h2>
+                            <p>During the Pandemic, many students found it hard to interact and learn with their peers with the lockdown so ECDE Foundation held many educational classes to benefit students all around the world to stay active and learn about a variety of different subjects. Some of these subjects include html, python, writing, poetry, basketball, fitness, and more.</p>
                         </div>
                     </div>
                 </div>
