--- a/project-details4.html
+++ b/project-details4.html
@@ -59,7 +59,7 @@
                             <li><a href="./projects.html">Get Involved</a></li>
                             <li><a href="./about.html">Donate</a></li>
                             <li><a href="./about.html">About Us</a></li>
-                            <li><a href="./contact.html">Contact</a></li>
+                            <li><a href="./about.html">Contact</a></li>
 <!--
                             <li><a href="#">Pages</a>
                                 <ul class="dropdown">
@@ -93,7 +93,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="breadcrumb__text">
-                        <h2>Maruthi Sevakshethra NGO</h2>
+                        <h2>Project Details</h2>
                         </div>
                     </div>
                 </div>
