--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
 		<meta name="keywords" content="Staging, unica, creative, html" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-		<title>Staging | Template</title>
+		<title>Contact | ECDE</title>
 
 		<!-- Google Font -->
 		<link
@@ -17,6 +17,11 @@
 			href="https://fonts.googleapis.com/css2?family=Aldrich&display=swap"
 			rel="stylesheet"
 		/>
+
+            <link rel="icon"
+            type="img/png"
+            href="img/sqlogo.png"
+     >
 
 		<!-- Css Styles -->
 		<link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
