--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Aldrich&display=swap" rel="stylesheet">
 
+            <link rel="icon"
+            type="img/png"
+            href="img/sqlogo.png"
+     >
+
     <!-- Css Styles -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
