--- a/projects.html
+++ b/projects.html
@@ -62,7 +62,7 @@
                         <ul>
                             <li><a href="./index.html">Home</a></li>
                             <li class="active"><a href="./projects.html">Get Involved</a></li>
-                            <li><a href="./about.html">Donate</a></li>
+                            <li><a href="./donate.html">Donate</a></li>
                             <li><a href="./about.html">About Us</a></li>
                             <li><a href="./contact.html">Contact</a></li>
 <!--
