--- a/services.html
+++ b/services.html
@@ -6,7 +6,7 @@
 		<meta name="keywords" content="Staging, unica, creative, html" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-		<title>Staging | Template</title>
+		<title>Donate | ECDE</title>
 
 		<!-- Google Font -->
 		<link
@@ -17,6 +17,11 @@
 			href="https://fonts.googleapis.com/css2?family=Aldrich&display=swap"
 			rel="stylesheet"
 		/>
+
+            <link rel="icon"
+            type="img/png"
+            href="img/sqlogo.png"
+     >
 
 		<!-- Css Styles -->
 		<link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
@@ -59,9 +64,9 @@
                     <div class="col-lg-6">
                         <nav class="header__menu mobile-menu">
                             <ul>
-                                <li class="active"><a href="./index.html">Home</a></li>
+                                <li><a href="./index.html">Home</a></li>
                                 <li><a href="./projects.html">Get Involved</a></li>
-                                <li><a href="./about.html">Donate</a></li>
+                                <li class="active"><a href="./services.html">Donate</a></li>
                                 <li><a href="./about.html">About Us</a></li>
                                 <li><a href="./about.html">Contact</a></li>
     <!--
@@ -97,10 +102,8 @@
 				<div class="row">
 					<div class="col-lg-12 text-center">
 						<div class="breadcrumb__text">
-							<h2>Our Services</h2>
+							<h2>Donate</h2>
 							<div class="breadcrumb__links">
-								<a href="./index.html">Home</a>
-								<span>Our Services</span>
 							</div>
 						</div>
 					</div>
@@ -192,12 +195,9 @@
 						<div class="col" style="display: flex; justify-content: center; align-items: center;">
 							<div class="counter__item">
 								<div class="counter__item__number">
-									<h2 class="count">85</h2>
 								</div>
 								<div class="counter__item__text">
 									<h5>
-										Projects<br />
-										Completed
 									</h5>
 								</div>
 							</div>
@@ -205,12 +205,9 @@
 						<div class="col" style="display: flex; justify-content: center; align-items: center;">
 							<div class="counter__item">
 								<div class="counter__item__number">
-									<h2 class="count">127</h2>
 								</div>
 								<div class="counter__item__text">
 									<h5>
-										Happy<br />
-										Clients
 									</h5>
 								</div>
 							</div>
@@ -253,29 +250,26 @@
 				<div class="row">
 					<div class="col-lg-5 col-md-5">
 						<div class="section-title">
-							<span>Branding</span>
-							<h2>Our Clients</h2>
+							<span>Fundraising</span>
+							<h2>Our Doners</h2>
 						</div>
 					</div>
 					<div class="col-lg-7 col-md-7">
 						<div class="row">
 							<div class="col-lg-4 col-md-4 col-sm-4">
-								<a href="#"><img src="img/logo/logo-1.png" alt="" /></a>
+								<a href="#"><img src="img/nri.png" alt="" /></a>
 							</div>
 							<div class="col-lg-4 col-md-4 col-sm-4">
-								<a href="#"><img src="img/logo/logo-2.png" alt="" /></a>
+								<a href="#"><img src="img/quad.jpg" alt="" /></a>
 							</div>
 							<div class="col-lg-4 col-md-4 col-sm-4">
-								<a href="#"><img src="img/logo/logo-3.png" alt="" /></a>
+								<a href="#"><img src="img/sanjiv.jpg" alt="" /></a>
 							</div>
 							<div class="col-lg-4 col-md-4 col-sm-4">
-								<a href="#"><img src="img/logo/logo-4.png" alt="" /></a>
+								<a href="#"><img src="img/zeal.png" alt="" /></a>
 							</div>
 							<div class="col-lg-4 col-md-4 col-sm-4">
-								<a href="#"><img src="img/logo/logo-3.png" alt="" /></a>
-							</div>
-							<div class="col-lg-4 col-md-4 col-sm-4">
-								<a href="#"><img src="img/logo/logo-5.png" alt="" /></a>
+								<a href="#"><img src="img/info.png" alt="" /></a>
 							</div>
 						</div>
 					</div>
