--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,7 @@
 							<ul>
 								<li><a href="./index.html">Home</a></li>
 								<li><a href="./projects.html">Get Involved</a></li>
-								<li><a href="./about.html">Donate</a></li>
+								<li><a href="./services.html">Donate</a></li>
 								<li><a href="./about.html">About Us</a></li>
 								<li class="active"><a href="./contact.html">Contact</a></li>
 								<!--
@@ -246,7 +246,7 @@
 						<div class="col-lg-4 col-md-6">
 							<div class="footer__top__newslatter">
 								<form action="#">
-									<a href="#" class="primary-btn">Contact Us</a>
+									<a href="contact.html" class="primary-btn">Contact Us</a>
 								</form>
 							</div>
 						</div>
