--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         <ul>
                             <li class="active"><a href="./index.html">Home</a></li>
                             <li><a href="./projects.html">Get Involved</a></li>
-                            <li><a href="./about.html">Donate</a></li>
+                            <li><a href="./services.html">Donate</a></li>
                             <li><a href="./about.html">About Us</a></li>
                             <li><a href="./contact.html">Contact</a></li>
 <!--
@@ -149,7 +149,7 @@
             <div class="hero__items set-bg" data-setbg="img/learnbg4.png">
                 <div class="hero__text">
                     <h2>Every Child Deserves Education Foundation</h2>
-                    <a href="#" class="primary-btn">Contact Us</a>
+                    <a href="contact.html" class="primary-btn">Contact Us</a>
                     <div class="hero__social">
                         <a href="https://www.facebook.com/ecdefoundation/?ref=page_internal"><i class="fa fa-facebook"></i></a>
                         <a href="https://www.instagram.com/ecde.foundation/"><i class="fa fa-instagram"></i></a>
