--- a/project-details.html
+++ b/project-details.html
@@ -7,12 +7,17 @@
     <meta name="keywords" content="Staging, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Staging | Template</title>
+    <title>Project Details | ECDE</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
     rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Aldrich&display=swap" rel="stylesheet">
+
+            <link rel="icon"
+            type="img/png"
+            href="img/sqlogo.png"
+     >
 
     <!-- Css Styles -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
@@ -43,49 +48,67 @@
     </div>
     <!-- Offcanvas Menu End -->
 
-<!-- Header Section Begin -->
-    <header class="header">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-lg-3">
-                    <div class="header__logo">
-                        <a href="index.html"><img style="height: 55px; width: 165px; margin: -10px;" src="img/ECDElogo.png" alt=""></a>
+<!-- Footer Section Begin -->
+    <footer class="footer set-bg" data-setbg="img/footer-bg.jpg">
+        <div class="container">
+            <div class="footer__top">
+                <div class="row">
+                    <div class="col-lg-8 col-md-6">
+                        <div class="footer__top__text">
+                            <h2>Ready To Work With Us?</h2>
+                        </div>
                     </div>
-                </div>
-                <div class="col-lg-6">
-                    <nav class="header__menu mobile-menu">
-                        <ul>
-                            <li><a href="./index.html">Home</a></li>
-                            <li><a href="./projects.html">Get Involved</a></li>
-                            <li><a href="./about.html">Donate</a></li>
-                            <li><a href="./about.html">About Us</a></li>
-                            <li><a href="./contact.html">Contact</a></li>
-<!--
-                            <li><a href="#">Pages</a>
-                                <ul class="dropdown">
-                                    <li><a href="./Project-details.html">Project Details</a></li>
-                                    <li><a href="./about.html">About</a></li>
-                                    <li><a href="./services.html">Services</a></li>
-                                    <li><a href="./blog-details.html">Blog Details</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="./blog.html">Blog</a></li>
-                            <li><a href="./contact.html">Contact</a></li>
-                        -->
-                        </ul>
-                    </nav>
-                </div>
-                <div class="col-lg-3">
-                    <div class="header__widget">
-                        <span>Call us for any questions</span>
-                        <h4>(510) 737-9942</h4>
+                    <div class="col-lg-4 col-md-6">
+                        <div class="footer__top__newslatter">
+                            <form action="#">
+                            <a href="#" class="primary-btn">Contact Us</a>
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="canvas__open"><i class="fa fa-bars"></i></div>
+            <div class="row">
+                <div class="col-lg-3 col-md-6 col-sm-6">
+                    <div class="footer__about">
+                        <div class="footer__logo">
+                            <a href="#"><img src="img/ECDElogo.png" alt=""></a>
+                        </div>
+                        <p>39111 Paseo Padre Pkwy<br />Fremont,  CA 94538</p>
+                        <ul>
+                            <li>ecdeorg@gmail.com</li>
+                            <li>(510) 737-9942</li>
+                        </ul>
+                        <div class="footer__social">
+                        <a href="https://www.facebook.com/ecdefoundation/?ref=page_internal"><i class="fa fa-facebook"></i></a>
+                        <a href="https://www.instagram.com/ecde.foundation/"><i class="fa fa-instagram"></i></a>
+                        <a href="https://www.linkedin.com/company/ecde-foundation/?viewAsMember=true"><i class="fa fa-linkedin"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="copyright">
+                <div class="row">
+                    <div class="col-lg-8 col-md-7">
+                        <div class="copyright__text">
+                            <p>Copyright © <script>
+                                document.write(new Date().getFullYear());
+                            </script> All rights reserved | This template is made with <i class="fa fa-heart-o"
+                            aria-hidden="true"></i> by <a href="https://colorlib.com"
+                            target="_blank">Colorlib</a>
+                        </p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-5">
+                    <div class="copyright__widget">
+                        <a href="#">Terms of use</a>
+                        <a href="#">Privacy Policy</a>
+                    </div>
+                </div>
+            </div>
         </div>
-    </header>
-    <!-- Header Section End -->
+    </div>
+</footer>
+<!-- Footer Section End -->
 
     <!-- Breadcrumb Section Begin -->
     <div class="breadcrumb-option spad set-bg" data-setbg="img/breadcrumb-bg.jpg">
@@ -146,7 +169,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="footer__top__newslatter">
                             <form action="#">
-                            <a href="#" class="primary-btn">Contact Us</a>
+                            <a href="contact.html" class="primary-btn">Contact Us</a>
                             </form>
                         </div>
                     </div>
