--- a/projects.html
+++ b/projects.html
@@ -158,7 +158,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="footer__top__newslatter">
                             <form action="#">
-                            <a href="#" class="primary-btn">Contact Us</a>
+                            <a href="contact.html" class="primary-btn">Contact Us</a>
                             </form>
                         </div>
                     </div>
