--- a/project-details4.html
+++ b/project-details4.html
@@ -93,7 +93,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="breadcrumb__text">
-                        <h2>Project Details</h2>
+                        <h2>Youtube Videos</h2>
                         </div>
                     </div>
                 </div>
@@ -109,22 +109,22 @@
                 <div class="col-lg-8">
                     <div class="row">
                         <div class="col-lg-6 col-md-6 col-sm-6">
-                            <img src="img/mar.png" alt="">
-                            <img src="img/pc2.jpeg" alt="">
-                            <img src="img/pc3.jpeg" alt="">
+                            <img src="img/yt1.png" alt="">
+                            <img src="img/yt3.png" alt="">
+                            <img src="img/yt4.png" alt="">
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-6">
-                            <img src="img/pc1.jpeg" alt="">
-                            <img src="img/pc4.jpeg" alt="">
+                            <img src="img/yt6.png" alt="">
+                            <img src="img/yt5.png" alt="">
+                            <img src="img/yt7.png" alt="">
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4">
                     <div class="project__sidebar">
                         <div class="project__sidebar__about">
-                            <h2>Maruthi Sevakshethra NGO</h2>
-                            <p>The ECDE Foundation has partnered with an Institution in India called Maruthi Seva Kshetra. This Institution schools orphaned children and children who cannot afford proper education by giving them all the basic needs in life. In addition, the Institution runs a school that is open to the public. We are proud to be working with them and 100% of our donations will go to them in the 2018-2019 year.</p>
-                            <p>On August 15, 2019 ECDE Foundation donated $800 and 2 computers to Maruthi Seva school/organization. The school used some money to buy a water heater so they can get clean hot water. In addition, they used the rest of the money to buy textbooks and other such supplies. Our CEO and our Program Manager met with the kids we were helping and spent time with them. We understood the true extent of their needs and were pleasantly surprised to see their drive for learning.</p>
+                            <h2>Youtube Videos</h2>
+                            <p>ECDE is excited to announce our new Youtube Curruculim project, we aim to equalize educational opportunity around the world by uploading free videos to our youtube channel and dispersing int0 as many channels as possible, we hope to inspire children around the world to pursue education no-matter their socioeconomic situation through free equality education. The high-quality content is made by talented and selfless American High School student volunteers who have an overwhelming passion in their subjects and would like to utilize it into something that would have a utilitarian impact. We hope to inspire every child around education! </p>
                         </div>
                     </div>
                 </div>
