--- a/projects.html
+++ b/projects.html
@@ -133,9 +133,9 @@
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6">
                     <div class="project__item">
-                        <a href="project-details.html">
+                        <a href="project-details4.html">
                         <img src="img/c4.jpg" alt="">
-                    <a href="#" class="primary-btn normal-btn">Youtube Tutorials</a>
+                    <a href="project-details4.html" class="primary-btn normal-btn">Youtube Tutorials</a>
                     </div>
                 </div>
                 <div class="col-lg-12 text-center">
