--- a/project-details6.html
+++ b/project-details6.html
@@ -98,7 +98,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="breadcrumb__text">
-                        <h2>India Project 2</h2>
+                        <h2>Maruthi Sevakshethra NGO</h2>
                         </div>
                     </div>
                 </div>
@@ -114,23 +114,22 @@
                 <div class="col-lg-8">
                     <div class="row">
                         <div class="col-lg-6 col-md-6 col-sm-6">
-                            <img src="img/bl3.jpeg" alt="">
-                            <img src="img/bl4.jpeg" alt="">
-                            <img src="img/bl1.jpeg" alt="">
+                            <img src="img/mar.png" alt="">
+                            <img src="img/pc2.jpeg" alt="">
+                            <img src="img/pc3.jpeg" alt="">
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-6">
-                            <img src="img/bl2.jpeg" alt="">
-                            <img src="img/bl5.jpeg" alt="">
-                            <img src="img/bl6.jpeg" alt="">
+                            <img src="img/pc1.jpeg" alt="">
+                            <img src="img/pc4.jpeg" alt="">
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4">
                     <div class="project__sidebar">
                         <div class="project__sidebar__about">
-                            <h2>India Project 2</h2>
-                            <p>This year ECDE Foundation has partnered with a large organization in India called Snehashasta which consists of software engineers giving back to their community and has identified 2 under-funded schools to raise funds for. Our goal is to raise $5000 dollars this year so we can impact as many students as possible and we need your help!.</p>
-                            <p>The first school we are helping is Keeping School Thirthahalli Shimoga District in India which is a village school that teaches students grades 1-7 and consists of 35 students and only 2 teachers. Currently, the school is only getting funding to pay for operating costs and is desperately needs donations for upgrading classroom infrastructure and school supplies for the kids.</p>
+                            <h2>Maruthi Sevakshethra NGO</h2>
+                            <p>The ECDE Foundation has partnered with an Institution in India called Maruthi Seva Kshetra. This Institution schools orphaned children and children who cannot afford proper education by giving them all the basic needs in life. In addition, the Institution runs a school that is open to the public. We are proud to be working with them and 100% of our donations will go to them in the 2018-2019 year.</p>
+                            <p>On August 15, 2019 ECDE Foundation donated $800 and 2 computers to Maruthi Seva school/organization. The school used some money to buy a water heater so they can get clean hot water. In addition, they used the rest of the money to buy textbooks and other such supplies. Our CEO and our Program Manager met with the kids we were helping and spent time with them. We understood the true extent of their needs and were pleasantly surprised to see their drive for learning.</p>
                         </div>
                     </div>
                 </div>
