--- a/projects.html
+++ b/projects.html
@@ -112,9 +112,9 @@
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-6">
                     <div class="project__item">
-                        <a href="project-details.html">
+                        <a href="project-details6.html">
                         <img src="img/c3.jpg" alt="">
-                    <a href="project-details.html" class="primary-btn normal-btn">Maruthi Sevakshethra NGO</a>
+                    <a href="project-details6.html" class="primary-btn normal-btn">Maruthi Sevakshethra NGO</a>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6">
