--- a/blog-details - Copy.html
+++ b/blog-details - Copy.html
@@ -91,24 +91,17 @@
                     <div class="blog__details__content">
                         <div class="blog__details__title">
                             <ul>
-                                <li>December 20, 2019 </li>
-                                <li>By John Doe</li>
+                                <li>October 1, 2021 </li>
                                 <li>Planning</li>
                             </ul>
-                            <h2>Target and Amazon Shopping List for Home Stagers</h2>
-                            <img src="img/blog/details/blog-details.jpg" alt="">
-                            <p>Forget Ebay and other forms of advertising for your property that costs you hard earned
-                                money. Properties have ready several locations around the world to take your free
-                            listings for any luxury property you have.</p>
+                            <h2>Time Management Tips & Tricks</h2>
+                            <img src="img/mang.jpg" alt="">
+                            <p> Last week, we spoke on the importance of managing your mental health through the struggles we all faced during the novel COVID-19 pandemic. One important part of managing your mental health is through time management. In this blog you will learn the ins and outs of controlling your time and with it, managing your mental health.</p>
                         </div>
                         <div class="blog__details__text">
-                            <p>Each location web site is purpose built so every Search Engine will pick up new listings
-                                within minutes. This way your customers only have to type in keywords relating to their
-                                search for a luxury home and the Search Engine will show the Invest Asset web site
-                            applicable to their location they are looking for.</p>
-                            <p>Most real estate companies are way too busy with selling their client’s properties to put
-                                any effort forth to their web site. Hence, making it difficult for web surfers to find
-                            their listings.</p>
+                            <h2>Tip 1: Set Clear Goals</h5>
+                            <break>
+                            <p> Our first tip is an important one, set clear objectives for each segment of the day for which you are focusing on a different topic. Ensuring that every hour of your day is spent wisely and efficiently will make your work go by smoother and faster. Having a plan of what you will do causes you to be more productive. If your schedule allows you to, allot some time in your day to plan out a schedule for you to follow. Even 30 minutes a day of planning can skyrocket your productivity, making your work easier.</p>
                         </div>
                         <div class="blog__item__quote">
                             <p>“Without question this is the stager you want to use! Jennifer staged a hard to sell home
