--- a/mental-health.html
+++ b/mental-health.html
@@ -7,17 +7,12 @@
     <meta name="keywords" content="Staging, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Project Details | Template</title>
+    <title>Staging | Template</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
     rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Aldrich&display=swap" rel="stylesheet">
-
-            <link rel="icon"
-            type="img/png"
-            href="img/sqlogo.png"
-     >
 
     <!-- Css Styles -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
@@ -38,18 +33,18 @@
     <div class="offcanvas-menu-overlay"></div>
     <div class="offcanvas-menu-wrapper">
         <div class="offcanvas__logo">
-            <a href="#"><img src="img/logo.png" alt=""></a>
+            <a href="#"><img src="img/ECDElogo.png" alt=""></a>
         </div>
         <div id="mobile-menu-wrap"></div>
         <div class="offcanvas__widget">
             <span>Call us for any questions</span>
-            <h4>+01 123 456 789</h4>
+            <h4>(510) 737-9942</h4>
         </div>
     </div>
     <!-- Offcanvas Menu End -->
 
-<!-- Header Section Begin -->
-    <header class="header">
+    <!-- Header Section Begin -->
+    <header class="header header-normal set-bg" data-setbg="img/little-header.jpg">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-3">
@@ -62,22 +57,10 @@
                         <ul>
                             <li><a href="./index.html">Home</a></li>
                             <li><a href="./projects.html">Get Involved</a></li>
-                            <li><a href="./blog.html">Blog</a></li>
+                            <li class="active"><a href="./blog.html">Blog</a></li>
                             <li><a href="./services.html">Donate</a></li>
                             <li><a href="./about.html">About Us</a></li>
                             <li><a href="./contact.html">Contact</a></li>
-<!--
-                            <li><a href="#">Pages</a>
-                                <ul class="dropdown">
-                                    <li><a href="./Project-details.html">Project Details</a></li>
-                                    <li><a href="./about.html">About</a></li>
-                                    <li><a href="./services.html">Services</a></li>
-                                    <li><a href="./blog-details.html">Blog Details</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="./blog.html">Blog</a></li>
-                            <li><a href="./contact.html">Contact</a></li>
-                        -->
                         </ul>
                     </nav>
                 </div>
@@ -93,49 +76,40 @@
     </header>
     <!-- Header Section End -->
 
-    <!-- Breadcrumb Section Begin -->
-    <div class="breadcrumb-option spad set-bg" data-setbg="img/breadcrumb-bg.jpg">
+    <!-- Blog Details Section Begin -->
+    <section class="blog-details spad">
         <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <div class="breadcrumb__text">
-                        <h2>ECDE Zoom Classes</h2>
+            <div class="row d-flex justify-content-center">
+                <div class="col-lg-10">
+                    <div class="blog__details__content">
+                        <div class="blog__details__title">
+                            <ul>
+                                <li>September 14, 2021 </li>
+                                <li>Mental Health</li>
+                            </ul>
+                            <h2>Controlling Your Mental Health in Trying Times</h2>
+                            <img src="img/covid.jpg" alt="">
+                            <p> Students these days can get easily stressed through endless ways, either it be through classes, navigating through the pathways in highschool, or through drifting away from friends. From wherever it comes from, stress and anxiety can make school life incredibly difficult to manage. Grades can drop, tensions can rise, and late work can get out of hand. Stress is an insanely important part of high school life that teens need to be careful of. To manage your stress, there are a number of things that you can do, and we will show you!</p>
                         </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Breadcrumb Section End -->
-
-    <!-- Project Details Section Begin -->
-    <section class="project-details spad">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8">
-                    <div class="row">
-                        <div class="col-lg-6 col-md-6 col-sm-6">
-                            <img src="img/zm1.jpg" alt="">
-                            <img src="img/zm3.jpg" alt="">
+                        <div class="blog__item__quote">
+                            <p>“The Strongest People Win Battles We Didn't Even Know About”</p>
+                            <span>Jonathan Harnisch</span>
                         </div>
-                        <div class="col-lg-6 col-md-6 col-sm-6">
-                            <img src="img/zm4.jpg" alt="">
-                            <img src="img/zm2.jpg" alt="">
+                        <div class="blog__details__text">
+                            <p> One of the many important ways to maintain a healthy mental attitude is by getting regular exercise. Even just 30 minutes of walking a day can help improve your mood and your mental health. Exercising doesn’t only help your mental health, though; exercising also benefits your heart. It doesn’t necessarily have to be walking, or for 30 minutes a day. Exercising can be anywhere, for any amount of time. For example, you can bike to school, or walk the dog after school, or even just walk the scenic route back home just to burn off a few more calories! All these activities will stack up; even though it doesn’t seem like much, over time, all of them will contribute towards positive mental health.</p>
+                            <p>Another important way to stay mentally healthy is by eating healthy regular meals. Creating a balanced diet can improve mental health significantly. For example, limiting caffeinated drinks like soft drinks, and limiting processed carbohydrates like added sugars or anything made of flour will lead to not only a healthier body but a healthier mental attitude. There are existing diet plans out there on the internet that can provide some tried-and-true methods to help you eat healthily. Some suggested diets are Whole 30 diets & the Weight Watchers program. For example, the Whole 30 diet program sets a goal to reduce too little or no sugar/caffeine and helps you practice normalizing reading food labels to maintain getting the required nutrients. Creating a schedule, and planning out the day is of utmost importance to managing time and work. It prevents you from slacking, and by planning out when to take breaks, you always have something to look forward to. Having a schedule keeps late nights of tedious homework away and keeps you in check, with procrastination not having such a strenuous hold on your mental health. Practicing gratitude gives you a much happier lifestyle. By being grateful & feeling appreciated gives you a much more positive life. Reminding yourself every day of what you are grateful for, you are much happier feeling loved.</p>
+                            <p> We’ve covered how to exercise, eat properly, create a schedule, and a variety of things that can help improve your mental state when you’re awake. But what about sleeping? Making sleep a priority is crucial to having a clear mind and staying positive. An important fact to note is that blue light, the most abundant form of light emitted from screens (on phones, tablets, TVs), can make it a lot harder to fall asleep. This is because blue light blocks your body’s production of melatonin, an essential hormone that helps you fall asleep. So, try to stay away from your phone screen before you sleep. It’s tempting to check your texts or emails before you sleep, but make a habit of keeping your phone out of reach; it will help your sleep schedule significantly. Caffeinated drinks make it harder to sleep, so stay away from those, too. If your body doesn’t get enough sleep, it will lead to sleep deprivation. Sleep deprivation causes irritability, poor cognition, impaired reflexes and response time, and chronic sleep deprivation can contribute to depression and anxiety. Create a quick, easy bedtime routine. Stretching before sleep can help you fall asleep quicker.</p>
                         </div>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="project__sidebar">
-                        <div class="project__sidebar__about">
-                            <h2>ECDE Zoom Classes</h2>
-                            <p>During the Pandemic, many students found it hard to interact and learn with their peers with the lockdown so ECDE Foundation held many educational classes to benefit students all around the world to stay active and learn about a variety of different subjects. Some of these subjects include html, python, writing, poetry, basketball, fitness, and more.</p>
+                        <div class="blog__details__text">
+                            <h3>In Summary...</h3>
+                            <p>These are ways that you can stop the stress and keep yourself productive while being relaxed. Being in high school can be some of the most stressful years of a teenager’s life, especially with no one really knowing themselves and what the future beholds, but it doesn’t have to be that way. Managing stress is an important aspect of adult life that students will have to learn over time. Hopefully, this article helped in your journey to adulthood!</p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <!-- Project Details Section End -->
+    <!-- Blog Details Section End -->
 
     <!-- Footer Section Begin -->
     <footer class="footer set-bg" data-setbg="img/footer-bg.jpg">
