--- a/time-managment.html
+++ b/time-managment.html
@@ -7,17 +7,12 @@
     <meta name="keywords" content="Staging, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Project Details | Template</title>
+    <title>Staging | Template</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
     rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Aldrich&display=swap" rel="stylesheet">
-
-            <link rel="icon"
-            type="img/png"
-            href="img/sqlogo.png"
-     >
 
     <!-- Css Styles -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
@@ -38,18 +33,18 @@
     <div class="offcanvas-menu-overlay"></div>
     <div class="offcanvas-menu-wrapper">
         <div class="offcanvas__logo">
-            <a href="#"><img src="img/logo.png" alt=""></a>
+            <a href="#"><img src="img/ECDElogo.png" alt=""></a>
         </div>
         <div id="mobile-menu-wrap"></div>
         <div class="offcanvas__widget">
             <span>Call us for any questions</span>
-            <h4>+01 123 456 789</h4>
+            <h4>(510) 737-9942</h4>
         </div>
     </div>
     <!-- Offcanvas Menu End -->
 
-<!-- Header Section Begin -->
-    <header class="header">
+    <!-- Header Section Begin -->
+    <header class="header header-normal set-bg" data-setbg="img/little-header.jpg">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-3">
@@ -62,22 +57,10 @@
                         <ul>
                             <li><a href="./index.html">Home</a></li>
                             <li><a href="./projects.html">Get Involved</a></li>
-                            <li><a href="./blog.html">Blog</a></li>
+                            <li class="active"><a href="./blog.html">Blog</a></li>
                             <li><a href="./services.html">Donate</a></li>
                             <li><a href="./about.html">About Us</a></li>
                             <li><a href="./contact.html">Contact</a></li>
-<!--
-                            <li><a href="#">Pages</a>
-                                <ul class="dropdown">
-                                    <li><a href="./Project-details.html">Project Details</a></li>
-                                    <li><a href="./about.html">About</a></li>
-                                    <li><a href="./services.html">Services</a></li>
-                                    <li><a href="./blog-details.html">Blog Details</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="./blog.html">Blog</a></li>
-                            <li><a href="./contact.html">Contact</a></li>
-                        -->
                         </ul>
                     </nav>
                 </div>
@@ -93,49 +76,64 @@
     </header>
     <!-- Header Section End -->
 
-    <!-- Breadcrumb Section Begin -->
-    <div class="breadcrumb-option spad set-bg" data-setbg="img/breadcrumb-bg.jpg">
+    <!-- Blog Details Section Begin -->
+    <section class="blog-details spad">
         <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <div class="breadcrumb__text">
-                        <h2>ECDE Zoom Classes</h2>
+            <div class="row d-flex justify-content-center">
+                <div class="col-lg-10">
+                    <div class="blog__details__content">
+                        <div class="blog__details__title">
+                            <ul>
+                                <li>October 1, 2021 </li>
+                                <li>Planning</li>
+                            </ul>
+                            <h2>Time Management Tips & Tricks</h2>
+                            <img src="img/mang.jpg" alt="">
+                            <p> Last week, we spoke on the importance of managing your mental health through the struggles we all faced during the novel COVID-19 pandemic. One important part of managing your mental health is through time management. In this blog you will learn the ins and outs of controlling your time and with it, managing your mental health.</p>
                         </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Breadcrumb Section End -->
+                        
+                        <div class="blog__item__quote">
+                            <p>“The lost time is never found again”</p>
+                            <span>Benjamin Franklin</span>
+                        </div>
 
-    <!-- Project Details Section Begin -->
-    <section class="project-details spad">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8">
-                    <div class="row">
-                        <div class="col-lg-6 col-md-6 col-sm-6">
-                            <img src="img/zm1.jpg" alt="">
-                            <img src="img/zm3.jpg" alt="">
+                        <div class="blog__details__text">
+                            <h2>Tip 1: Set Clear Goals</h5>
+                            <break>
+                            <p> Our first tip is an important one, set clear objectives for each segment of the day for which you are focusing on a different topic. Ensuring that every hour of your day is spent wisely and efficiently will make your work go by smoother and faster. Having a plan of what you will do causes you to be more productive. If your schedule allows you to, allot some time in your day to plan out a schedule for you to follow. Even 30 minutes a day of planning can skyrocket your productivity, making your work easier.</p>
                         </div>
-                        <div class="col-lg-6 col-md-6 col-sm-6">
-                            <img src="img/zm4.jpg" alt="">
-                            <img src="img/zm2.jpg" alt="">
                         </div>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="project__sidebar">
-                        <div class="project__sidebar__about">
-                            <h2>ECDE Zoom Classes</h2>
-                            <p>During the Pandemic, many students found it hard to interact and learn with their peers with the lockdown so ECDE Foundation held many educational classes to benefit students all around the world to stay active and learn about a variety of different subjects. Some of these subjects include html, python, writing, poetry, basketball, fitness, and more.</p>
+                        <div class="blog__details__text">
+                            <h2>TIP 2: Avoid Distractions</h2>
+                            <break>
+                            <p> Our phones feel like an extension of ourselves; we bring them wherever we go, and use them to quickly and conveniently do many things. However, for that same reason, they can be a huge distraction - and in order to manage your time efficiently, there should be no distractions. Put your phone away (and on silent mode), close all irrelevant tabs, and focus directly on what you are working on. Adopt the mindset that the time you are setting aside to do work is 100% for that work. </p>
+                        </div>
+                        <div class="blog__details__text">
+                            <h2>TIP 3: Clean Up your Room</h2>
+                            <break>
+                            <p>This tip might sound like a chore, and that is because it is. As annoying as it might be, cleaning up your room can significantly boost your productivity. You can easily get distracted looking for a piece of paper in a pile of work, or an eraser lying somewhere on your desk, out of view. Organize your papers, use dividers, stack your textbooks, throw the trash away, and label things. It will save valuable time later on when you are working.</p>
+                        </div>
+                        <div class="blog__details__text">
+                            <h2>TIP 4: Plan our Your Breaks</h2>
+                            <break>
+                            <p> Planning out specific break times allows you to have something to look forward to during work periods. In between the specific tasks that you have planned out, leave some space for a break where you can have a drink of water, fix yourself a snack, and let your mind reset for the next task at hand. Do not underestimate the effectiveness of this task, as it can make an enormous difference in your behaviour and mood during your next task. If this step is ignored, you might find yourself thinking about the work that you have just finished working on. A small amount of time to recharge is in order after being productive for some time. </p>
+                        </div>
+                        <div class="blog__details__text">
+                            <h2>TIP 5: Get an Appropriate Amount of Sleep Each Night</h2>
+                            <break>
+                            <p> Our phones feel like an extension of ourselves; we bring them wherever we go, and use them to quickly and conveniently do many things. However, for that same reason, they can be a huge distraction - and in order to manage your time efficiently, there should be no distractions. Put your phone away (and on silent mode), close all irrelevant tabs, and focus directly on what you are working on. Adopt the mindset that the time you are setting aside to do work is 100% for that work. </p>
+                        </div>
+                        <div class="blog__details__text">
+                            <h2>In Summary...</h2>
+                            <break>
+                            <p> Time management is an important step in efficiently completing work. By setting clear goals, avoiding distractions, cleaning, planning out breaks, and getting an appropriate amount of sleep, you can efficiently manage your time and not have to rush at the last minute to complete a task. It will improve your mental state, and meaningfully impact every facet of your life. </p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <!-- Project Details Section End -->
+    <!-- Blog Details Section End -->
 
     <!-- Footer Section Begin -->
     <footer class="footer set-bg" data-setbg="img/footer-bg.jpg">
