--- a/blog.html
+++ b/blog.html
@@ -33,31 +33,35 @@
     <div class="offcanvas-menu-overlay"></div>
     <div class="offcanvas-menu-wrapper">
         <div class="offcanvas__logo">
-            <a href="#"><img src="img/logo.png" alt=""></a>
+            <a href="#"><img src="img/ECDElogo.png" alt=""></a>
         </div>
         <div id="mobile-menu-wrap"></div>
         <div class="offcanvas__widget">
             <span>Call us for any questions</span>
-            <h4>+01 123 456 789</h4>
+            <h4>(510) 737-9942</h4>
         </div>
     </div>
     <!-- Offcanvas Menu End -->
 
-    <!-- Header Section Begin -->
+<!-- Header Section Begin -->
     <header class="header">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-3">
                     <div class="header__logo">
-                        <a href="#"><img src="img/logo.png" alt=""></a>
+                        <a href="index.html"><img style="height: 55px; width: 165px; margin: -10px;" src="img/ECDElogo.png" alt=""></a>
                     </div>
                 </div>
                 <div class="col-lg-6">
                     <nav class="header__menu mobile-menu">
                         <ul>
                             <li><a href="./index.html">Home</a></li>
-                            <li><a href="./projects.html">Projects</a></li>
-                            <li><a href="./about.html">About</a></li>
+                            <li><a href="./projects.html">Get Involved</a></li>
+                            <li class="active"><a href="./blog.html">Blog</a></li>
+                            <li><a href="./services.html">Donate</a></li>
+                            <li><a href="./about.html">About Us</a></li>
+                            <li><a href="./contact.html">Contact</a></li>
+<!--
                             <li><a href="#">Pages</a>
                                 <ul class="dropdown">
                                     <li><a href="./Project-details.html">Project Details</a></li>
@@ -66,15 +70,16 @@
                                     <li><a href="./blog-details.html">Blog Details</a></li>
                                 </ul>
                             </li>
-                            <li class="active"><a href="./blog.html">Blog</a></li>
+                            <li><a href="./blog.html">Blog</a></li>
                             <li><a href="./contact.html">Contact</a></li>
+                        -->
                         </ul>
                     </nav>
                 </div>
                 <div class="col-lg-3">
                     <div class="header__widget">
                         <span>Call us for any questions</span>
-                        <h4>+01 123 456 789</h4>
+                        <h4>(510) 737-9942</h4>
                     </div>
                 </div>
             </div>
@@ -91,8 +96,6 @@
                     <div class="breadcrumb__text">
                         <h2>Our Blogs</h2>
                         <div class="breadcrumb__links">
-                            <a href="./index.html">Home</a>
-                            <span>Blogs</span>
                         </div>
                     </div>
                 </div>
@@ -110,38 +113,37 @@
                         <div class="blog__item">
                             <ul>
                                 <li>December 20, 2019 </li>
-                                <li>By John Doe</li>
                                 <li>Planning</li>
                             </ul>
-                            <h2>Target and Amazon Shopping List for Home Stagers</h2>
-                            <img src="img/blog/blog-1.jpg" alt="">
+                            <h2>
+                                <a href="time-managment.html"; style="color:black">Time Management Tips & Tricks</a>
+                            </h2>
+                            <img src="img/img1.jpg" alt=""></img>
                             <div class="blog__item__text">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua. Risus commodo viverra maecenas accumsan
-                                lacus vel facilisis. </p>
-                                <a href="#">Read more</a>
+                                <p> Time management is an important step in efficiently completing work. By setting clear goals, avoiding distractions, cleaning, planning out breaks, and getting an appropriate amount of sleep, you can efficiently manage your time and not have to rush at the last minute to complete a task. It will improve your mental state, and meaningfully impact every facet of your life. </p>
+                                <a href="time-managment.html">Read more</a>
                             </div>
                         </div>
                         <div class="blog__item__quote">
-                            <p>“Without question this is the stager you want to use! Jennifer staged a hard to sell home
-                            for me and we sold it fast! …. Jennifer made it possible.”</p>
-                            <span>Martin Lockhart</span>
+                            <p>“It is not enough to be busy; the question is what are we busy about”</p>
+                            <span>Henry David Thoreau</span>
                         </div>
+                        
                         <div class="blog__item">
                             <ul>
-                                <li>December 20, 2019 </li>
-                                <li>By John Doe</li>
-                                <li>Planning</li>
+                                <li>September 14, 2021 </li>
+                                <li>Mental Health</li>
                             </ul>
-                            <h2>6 Ideas for Team Building & Employee Appreciation for Home Stagers</h2>
-                            <img src="img/blog/blog-2.jpg" alt="">
+                            <h2>
+                                <a href="mental-health.html"; style="color:black">Controlling Your Mental Health in Trying Times</a>
+                            </h2>
+                            <img src="img/mh.jpg" alt="">
                             <div class="blog__item__text">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua. Risus commodo viverra maecenas accumsan
-                                lacus vel facilisis. </p>
-                                <a href="#">Read more</a>
+                                <p> Students these days can get easily stressed through endless ways, either it be through classes, navigating through the pathways in highschool, or through drifting away from friends. From wherever it comes from, stress and anxiety can make school life incredibly difficult to manage. Grades can drop, tensions can rise, and late work can get out of hand. Stress is an insanely important part of high school life that teens need to be careful of. To manage your stress, there are a number of things that you can do, and we will show you!</p>
+                                <a href="mental-health.html">Read more</a>
                             </div>
                         </div>
+                        <!--
                         <div class="blog__item">
                             <ul>
                                 <li>December 20, 2019 </li>
@@ -157,14 +159,14 @@
                                 <a href="#">Read more</a>
                             </div>
                         </div>
+                    -->
                     </div>
                     <div class="row">
                         <div class="col-lg-12">
                             <div class="blog__pagination">
-                                <a href="#">1</a>
-                                <a href="#">2</a>
-                                <a href="#">3</a>
-                                <a href="#"><i class="fa fa-angle-double-right"></i></a>
+                                <a style="color:white">1</a>
+                                <a style="color:white">2</a>
+                                <a style="color:white">3</a>
                             </div>
                         </div>
                     </div>
@@ -172,82 +174,14 @@
                 <div class="col-lg-4">
                     <div class="blog__sidebar">
                         <div class="blog__sidebar__about">
-                            <img class="author__pic" src="img/blog/blog-about.png" alt="">
-                            <p>Quis ipsum suspendisse ultrices gravid. Risus commodo viverra maece accums lacus vel
-                            facilisis. </p>
-                            <img src="img/blog/signature.png" alt="">
-                        </div>
-                        <div class="blog__sidebar__search">
-                            <form action="#">
-                                <input type="text" placeholder="Searach...">
-                                <button type="submit"><span class="icon_search"></span></button>
-                            </form>
-                        </div>
-                        <div class="blog__sidebar__categories">
-                            <h5>Categories</h5>
-                            <ul>
-                                <li>Work Space</li>
-                                <li>Office Building</li>
-                                <li>HomeStay</li>
-                                <li>Making</li>
-                                <li>Process</li>
-                            </ul>
-                        </div>
-                        <div class="blog__sidebar__feature">
-                            <h5>Feature News</h5>
-                            <a href="#" class="blog__sidebar__feature__item">
-                                <div class="blog__sidebar__feature__item__pic">
-                                    <img src="img/blog/br-1.jpg" alt="">
-                                </div>
-                                <div class="blog__sidebar__feature__item__text">
-                                    <span>December 20, 2019</span>
-                                    <h6>Grace Millane's mother tells killer she died 'terrified</h6>
-                                </div>
-                            </a>
-                            <a href="#" class="blog__sidebar__feature__item">
-                                <div class="blog__sidebar__feature__item__pic">
-                                    <img src="img/blog/br-2.jpg" alt="">
-                                </div>
-                                <div class="blog__sidebar__feature__item__text">
-                                    <span>December 20, 2019</span>
-                                    <h6>A 'gregarious' gap-year student who dreamed.</h6>
-                                </div>
-                            </a>
-                            <a href="#" class="blog__sidebar__feature__item">
-                                <div class="blog__sidebar__feature__item__pic">
-                                    <img src="img/blog/br-3.jpg" alt="">
-                                </div>
-                                <div class="blog__sidebar__feature__item__text">
-                                    <span>December 20, 2019</span>
-                                    <h6>A 'gregarious' gap-year student who dreamed.</h6>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="blog__sidebar__tag">
-                            <h5>Tag</h5>
-                            <a href="#">Branding</a>
-                            <a href="#">Office</a>
-                            <a href="#">Creative</a>
-                            <a href="#">Building</a>
-                            <a href="#">Portfolio</a>
-                            <a href="#">Products</a>
-                            <a href="#">Website</a>
-                            <a href="#">Design</a>
-                            <a href="#">Working Space</a>
+                            <img style ="width:154px";class="author__pic" src="img/sqlogo.png" alt="">
+                            <p>Welcome to the ECDE Blogs. Here you can learn from our many different guided articles!</p>
                         </div>
                         <div class="blog__sidebar__social">
                             <h5>Follow Us</h5>
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-instagram"></i></a>
-                            <a href="#"><i class="fa fa-linkedin"></i></a>
-                        </div>
-                        <div class="blog__sidebar__newslatter">
-                            <h5>Newslatter</h5>
-                            <form action="#">
-                                <input type="text" placeholder="Your email address">
-                                <button type="submit"><i class="fa fa-location-arrow"></i></button>
-                            </form>
+                        <a href="https://www.facebook.com/ecdefoundation/?ref=page_internal"><i class="fa fa-facebook"></i></a>
+                        <a href="https://www.instagram.com/ecde.foundation/"><i class="fa fa-instagram"></i></a>
+                        <a href="https://www.linkedin.com/company/ecde-foundation/?viewAsMember=true"><i class="fa fa-linkedin"></i></a>
                         </div>
                     </div>
                 </div>
@@ -269,8 +203,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="footer__top__newslatter">
                             <form action="#">
-                                <input type="text" placeholder="Enter your email...">
-                                <button type="submit"><i class="fa fa-send"></i></button>
+                            <a href="#" class="primary-btn">Contact Us</a>
                             </form>
                         </div>
                     </div>
@@ -280,52 +213,18 @@
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="footer__about">
                         <div class="footer__logo">
-                            <a href="#"><img src="img/logo.png" alt=""></a>
+                            <a href="#"><img src="img/ECDElogo.png" alt=""></a>
                         </div>
-                        <p>7176 Blue Spring Lane <br />Santa Monica, CA 90403</p>
+                        <p>39111 Paseo Padre Pkwy<br />Fremont,  CA 94538</p>
                         <ul>
-                            <li>Info.colorlib@gmail.com</li>
-                            <li>+84 123 456 789</li>
+                            <li>ecdeorg@gmail.com</li>
+                            <li>(510) 737-9942</li>
                         </ul>
                         <div class="footer__social">
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-instagram"></i></a>
-                            <a href="#"><i class="fa fa-linkedin"></i></a>
+                        <a href="https://www.facebook.com/ecdefoundation/?ref=page_internal"><i class="fa fa-facebook"></i></a>
+                        <a href="https://www.instagram.com/ecde.foundation/"><i class="fa fa-instagram"></i></a>
+                        <a href="https://www.linkedin.com/company/ecde-foundation/?viewAsMember=true"><i class="fa fa-linkedin"></i></a>
                         </div>
-                    </div>
-                </div>
-                <div class="col-lg-2 offset-lg-1 col-md-3 col-sm-6">
-                    <div class="footer__widget">
-                        <h6>Company</h6>
-                        <ul>
-                            <li><a href="#">About Us</a></li>
-                            <li><a href="#">Services</a></li>
-                            <li><a href="#">Our Works</a></li>
-                            <li><a href="#">Career</a></li>
-                            <li><a href="#">FAQs</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-2 col-md-3 col-sm-6">
-                    <div class="footer__widget">
-                        <h6>Services</h6>
-                        <ul>
-                            <li><a href="#">Architecture</a></li>
-                            <li><a href="#">Interior Design</a></li>
-                            <li><a href="#">Exterior Design</a></li>
-                            <li><a href="#">Planning</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-6">
-                    <div class="footer__address">
-                        <h6>Get In Touch</h6>
-                        <p>7176 Blue Spring Lane <br />Santa Monica, CA 90403</p>
-                        <ul>
-                            <li>Info.colorlib@gmail.com</li>
-                            <li>+84 123 456 789</li>
-                        </ul>
                     </div>
                 </div>
             </div>
