--- a/contact.html
+++ b/contact.html
@@ -71,6 +71,7 @@
 							<ul>
 								<li><a href="./index.html">Home</a></li>
 								<li><a href="./projects.html">Get Involved</a></li>
+                            	<li><a href="./blog.html">Blog</a></li>
 								<li><a href="./services.html">Donate</a></li>
 								<li><a href="./about.html">About Us</a></li>
 								<li class="active"><a href="./contact.html">Contact</a></li>
