--- a/project-details5.html
+++ b/project-details5.html
@@ -57,6 +57,7 @@
                         <ul>
                             <li><a href="./index.html">Home</a></li>
                             <li><a href="./projects.html">Get Involved</a></li>
+                            <li><a href="./blog.html">Blog</a></li>
                             <li><a href="./services.html">Donate</a></li>
                             <li><a href="./about.html">About Us</a></li>
                             <li><a href="./contact.html">Contact</a></li>
