--- a/projects.html
+++ b/projects.html
@@ -121,7 +121,7 @@
                     <div class="project__item">
                         <a href="project-details2.html">
                         <img src="img/c2.jpg" alt="">
-                    <a href="project-details2.html" class="primary-btn normal-btn">Belur School</a>
+                    <a href="project-details2.html" class="primary-btn normal-btn">India Project 1</a>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6">
