--- a/services.html
+++ b/services.html
@@ -64,11 +64,12 @@
                     <div class="col-lg-6">
                         <nav class="header__menu mobile-menu">
                             <ul>
-                                <li><a href="./index.html">Home</a></li>
-                                <li><a href="./projects.html">Get Involved</a></li>
-                                <li class="active"><a href="./services.html">Donate</a></li>
-                                <li><a href="./about.html">About Us</a></li>
-                                <li><a href="./about.html">Contact</a></li>
+                            <li><a href="./index.html">Home</a></li>
+                            <li><a href="./projects.html">Get Involved</a></li>
+                            <li><a href="./blog.html">Blog</a></li>
+                            <li class="active"><a href="./services.html">Donate</a></li>
+                            <li><a href="./about.html">About Us</a></li>
+                            <li><a href="./contact.html">Contact</a></li>
     <!--
                                 <li><a href="#">Pages</a>
                                     <ul class="dropdown">
